--- a/ProductsAsp/Views/Product/GetAll.cshtml
+++ b/ProductsAsp/Views/Product/GetAll.cshtml
@@ -4,6 +4,7 @@
     <div class="row justify-content-center">
         @if (Model.Count > 0)
         {
+            <a asp-controller="Product" asp-action="AddProduct" class="btn btn-outline-info">Add</a>
             @foreach (var item in Model)
             {
                 <div class="col-sm" style="margin-top: 10px;">
@@ -12,9 +13,9 @@
                             <h5 class="card-title">Product Name: @item.ProductName</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Price : @item.Price</h6>
                             <p class="card-text">Description: @item.Description</p>
-                            <a asp-controller="Product" asp-action="Get" asp-route-id="@item.Id" class="btn btn-outline-info">Get</a>
+                            <a asp-controller="Product" asp-action="Get" asp-route-id="@item.Id" class="btn btn-outline-info">Product</a>
+
                         </div>
-                        <a as></a>
                     </div>
                 </div>
             }
