--- a/ProductsAsp/Views/Product/Get.cshtml
+++ b/ProductsAsp/Views/Product/Get.cshtml
@@ -5,6 +5,6 @@
         <p>Product Name: @Model.ProductName</p>
         <p>Description: @Model.Description</p>
         <p>Price: @Model.Price</p>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="GetAll">Exit</a>
+        <a class="btn btn-primary" asp-area="" asp-controller="Product" asp-action="GetAll">Exit</a>
     </div>
 }
