--- a/ProductsAsp/Views/Product/GetAll.cshtml
+++ b/ProductsAsp/Views/Product/GetAll.cshtml
@@ -4,25 +4,24 @@
     <div class="row justify-content-center">
         @if (Model.Count > 0)
         {
-            <a asp-controller="Product" asp-action="AddProduct" class="btn btn-outline-info">Add</a>
+            
             @foreach (var item in Model)
             {
-                <div class="col-sm" style="margin-top: 10px;">
-                    <div class="card mx-auto" style="width: 15rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Product Name: @item.ProductName</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Price : @item.Price</h6>
-                            <p class="card-text">Description: @item.Description</p>
-                            <a asp-controller="Product" asp-action="Get" asp-route-id="@item.Id" class="btn btn-outline-info">Product</a>
+                <div class="col-sm" style="margin-top: 10px; width:18rem;">
+                    <div class="card mx-auto" style="width: 18rem; border:2px solid #007bff">
+                        <div class="card-body" style="width:18rem;">
+                            <p style="font-size:20px;color:#007bff" class="card-title">Product Name: @item.ProductName</p>
+                            <p style="color:#007bff" class="card-text">Price : @item.Price</p>
+                            <p style="color:#007bff" class="card-text">Description: @item.Description</p>
+                            <a asp-controller="Product" asp-action="Get" asp-route-id="@item.Id" class="btn btn-primary">Product</a>
+                            <a asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a>
+                            <a asp-controller="Product" asp-action="UpdateProduct" asp-route-id="@item.Id" class="btn btn-primary">Update</a>
 
                         </div>
                     </div>
                 </div>
             }
-        }
-        else
-        {
-            <h1>Empty, add product</h1>
+            <a asp-controller="Product" asp-action="AddProduct" style="margin-top:20px" class="btn btn-primary">Add</a>
         }
     </div>
 </div>
